# rhinolabs-ai

./: ARCHITECTURE.md  Cargo.toml  Makefile  README.md
.githooks/: pre-push
.github/workflows/: test.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/commands/: auto_sync.rs  deploy.rs  doctor.rs  install.rs  mod.rs  profile.rs  rag.rs  skill.rs  status.rs  sync_mcp.rs  update.rs
core/: Cargo.toml  README.md
core/src/: deploy.rs  diagnostics.rs  git.rs  installer.rs  instructions.rs  lib.rs  manifest.rs  mcp_config.rs  mcp_sync.rs  output_styles.rs  paths.rs  profiles.rs  project.rs  rag.rs  settings.rs  skills.rs  test_utils.rs  updater.rs  version.rs
core/tests/: integration_install.rs  integration_mcp_sync.rs  integration_rag.rs
gui/: GUI_STRUCTURE.md  README.md  package.json  pnpm-lock.yaml
gui/src/: App.tsx  api.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs
gui/src/pages/: Dashboard.tsx  Mcp.tsx  Profiles.tsx  Skills.tsx
gui/tests/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
gui/tests/e2e/: 00-navigation.spec.ts  01-dashboard.spec.ts  02-skills.spec.ts  03-settings.spec.ts  04-mcp.spec.ts  05-output-style.spec.ts  06-diagnostics.spec.ts  07-instructions.spec.ts  07-profiles.spec.ts
gui/tests/e2e/mocks/: tauri-mock.js
rhinolabs-claude/: .mcp.json  .skills-config.json  CLAUDE.md  README.md  settings.json
rhinolabs-claude/.claude-plugin/: plugin.json
rhinolabs-claude/skills/pre-push-validation/: SKILL.md
