[package]
name = "rhinolabs-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# Main binary: rhinolabs-ai
[[bin]]
name = "rhinolabs-ai"
path = "src/main.rs"

# Alias: rlai (short form)
[[bin]]
name = "rlai"
path = "src/main.rs"

[dependencies]
rhinolabs-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
